--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+financial_control/pubspec.lock
